Implement main file to adopt params from env and config docker-compose

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,7 +26,9 @@ ENV DB_NAME ''
 ENV DB_USERNAME ''
 ENV DB_PASSWORD ''
 
+COPY --from=builder /go/bin/bridge /usr/local/bin/bridge
 COPY --from=builder /opt/config/ ./
+COPY --from=builder /opt/contracts ./contracts
 COPY --from=builder /opt/docker/entrypoint.sh ./
 
 ENTRYPOINT ["./entrypoint.sh"]
