Correct config, use log.Address instead of transaction.To when checking events

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,7 @@ ENV ETHEREUM_RPC ''
 ENV ETHEREUM_VALIDATOR_KEY ''
 ENV ETHEREUM_RELAYER_KEY ''
 ENV VERBOSITY 3
+ENV NUMBER_OF_WORKERS 1024
 
 ENV DB_HOST ''
 ENV DB_PORT ''
