--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,6 +27,8 @@ ENV DB_NAME ''
 ENV DB_USERNAME ''
 ENV DB_PASSWORD ''
 
+ENV CLEANER ''
+
 COPY --from=builder /go/bin/bridge /usr/local/bin/bridge
 COPY --from=builder /opt/config/ ./
 COPY --from=builder /opt/contracts ./contracts
