--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,6 +26,9 @@ ENV DB_PORT ''
 ENV DB_NAME ''
 ENV DB_USERNAME ''
 ENV DB_PASSWORD ''
+ENV DB_CONN_MAX_LIFE_TIME ''
+ENV DB_MAX_IDLE_CONNS ''
+ENV DB_MAX_OPEN_CONNS ''
 
 ENV CLEANER ''
 
