--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - VERBOSITY=${VERBOSITY}
       - CONFIG_PATH=${CONFIG_PATH}
+      - DB_MAX_OPEN_CONNS=${DB_MAX_OPEN_CONNS}
     depends_on:
       - db
       - node
