--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,8 @@
 # Build Geth in a stock Go builder container
-FROM golang:1.18.2-alpine3.13 as builder
+FROM golang:1.18.2-alpine3.15 as builder
 
 RUN apk add --no-cache make gcc musl-dev linux-headers git
-
+WORKDIR /opt
 COPY . /opt
 RUN cd /opt && make bridge
 
