--- a/docker/.env
+++ b/docker/.env
@@ -1,7 +1,7 @@
-RONIN_RPC=Ronin__http://node:8545
-RONIN_VALIDATOR_KEY=Ronin__xxxx4563e6591c1eba4b932a3513006cb5bcd1a6f69c32295dxxxx
-RONIN_RELAYER_KEY=Ronin__xxxx4563e6591c1eba4b932a3513006cb5bcd1a6f69c32295dxxxx
-ETHEREUM_RPC=Ethereum__https://eth-ropsten.alchemyapi.io/v2/<YOUR-API-KEY>
+RONIN_RPC=http://node:8545
+RONIN_VALIDATOR_KEY=xxxx4563e6591c1eba4b932a3513006cb5bcd1a6f69c32295dxxxx
+RONIN_RELAYER_KEY=xxxx4563e6591c1eba4b932a3513006cb5bcd1a6f69c32295dxxxx
+ETHEREUM_RPC=https://eth-ropsten.alchemyapi.io/v2/<YOUR-API-KEY>
 ETHEREUM_VALIDATOR_KEY=
 ETHEREUM_RELAYER_KEY=
 VERBOSITY=3
