Add job directly to db and to jobChan instead of putting them to prepareJobChan to make sure block is updated after all jobs were added into db

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -33,6 +33,10 @@ services:
       - VERBOSITY=${VERBOSITY}
       - CONFIG_PATH=${CONFIG_PATH}
       - DB_MAX_OPEN_CONNS=${DB_MAX_OPEN_CONNS}
+      - RONIN_TASK_INTERVAL=${RONIN_TASK_INTERVAL}
+      - RONIN_TRANSACTION_CHECK_PERIOD=${RONIN_TRANSACTION_CHECK_PERIOD}
+      - RONIN_MAX_PROCESSING_TASKS=${RONIN_MAX_PROCESSING_TASKS}
+      - ETHEREUM_GET_LOGS_BATCH_SIZE=${ETHEREUM_GET_LOGS_BATCH_SIZE}
     depends_on:
       - db
       - node
