Add env set max query for ronin task

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,8 @@ ENV RONIN_TASK_INTERVAL ''
 ENV RONIN_TRANSACTION_CHECK_PERIOD ''
 ENV RONIN_MAX_PROCESSING_TASKS ''
 
+ENV RONIN_MAX_TASK_QUERY ''
+
 ENV ETHEREUM_RPC ''
 ENV ETHEREUM_VALIDATOR_KEY ''
 ENV ETHEREUM_RELAYER_KEY ''
