Reset tasks to pending if transaction receipt return failed (#8)
* Reset tasks to pending if transaction receipt return failed

* Correct successTasks and failedTasks while sending bulk transactions

* Update tasks to done when transaction is nil

* Add new migration version that resets all failed tasks to pending

* Add doneTasks to sendBulkTransactions to update tasks to done

* Reduce confirm receipt time and reset task to pending if reorg occurs

* Add tx_created_at field to task table which is used to load processing tasks without sleep
separated bulkTask into different files

* Remove unused function

* Modify migration 20220703: change `tx_created_at` to use `now` instead of `now - safe_block_range`

* Change height in ronin and ropsten in testnet config

* Check if job has processed transaction or not to prevent duplication

* Fix cannot add callback job due to duplicate transaction hash

* Add data to dedup string format to prevent incorrect dedup

* Remove dedup job

* Optimize update task: only update used columns instead all

* Lock task when it is processing to prevent duplication

* Improve graceful shutdown

* Add and store receipt id and task id to processed receipt table

* Update processed_receipt table: add uniqueIndex for task_id and receipt_id

* Add maxProcessingTasks to limit processing tasks

* Add taskInterval, transactionCheckPeriod env to Dockerfile

* Add job directly to db and to jobChan instead of putting them to prepareJobChan to make sure block is updated after all jobs were added into db

* Add log to display taskInterval and txCheckInterval while starting ronin task

* Save processed block to db after store new job

* Improve storing processed blocks

* Add code to make sure all nodes are up-to-date before processing

* Fix callback job always returns nil

* Subtract block value from latest migration to 500

* Add env set max query for ronin task

* Add default task interval

--- a/config/config.testnet.json
+++ b/config/config.testnet.json
@@ -7,20 +7,21 @@
       "safeBlockRange": 10,
       "maxTasksQuery": 1000,
       "minTasksQuery": 50,
+      "taskInterval": 3,
       "transactionCheckPeriod": 5,
       "secret": {
         "validator": "",
         "relayer": ""
       },
-      "fromHeight": 6508284,
+      "fromHeight": 8010875,
       "processWithinBlocks": 864000,
       "contracts": {
-        "Gateway": "0x03d1F13c7391F6B5A651143a31034cf728A93694",
-        "EthGateway": "0x3b6371EB912bFd5C0E249A16000ffbC6B881555A"
+        "Gateway": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
+        "EthGateway": "0x4E4D9B21B157CCD52b978C3a3BCd1dc5eBAE7167"
       },
       "subscriptions": {
         "MainchainWithdrewSubscription": {
-          "to": "0x03d1F13c7391F6B5A651143a31034cf728A93694",
+          "to": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
           "type": 1,
           "handler": {
             "abi": "contracts/ronin/RoninGatewayV2.abi",
@@ -31,7 +32,7 @@
           }
         },
         "WithdrawalRequestedSubscription": {
-          "to": "0x03d1F13c7391F6B5A651143a31034cf728A93694",
+          "to": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
           "type": 1,
           "handler": {
             "abi": "contracts/ronin/RoninGatewayV2.abi",
@@ -42,7 +43,7 @@
           }
         },
         "WithdrawalSignaturesRequestedSubscription": {
-          "to": "0x03d1F13c7391F6B5A651143a31034cf728A93694",
+          "to": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
           "type": 1,
           "handler": {
             "abi": "contracts/ronin/RoninGatewayV2.abi",
@@ -65,14 +66,14 @@
         "validator": "",
         "relayer": ""
       },
-      "fromHeight": 12234008,
+      "fromHeight": 12522064,
       "processWithinBlocks": 198720,
       "contracts": {
-        "Gateway": "0x03d1F13c7391F6B5A651143a31034cf728A93694"
+        "Gateway": "0xA8D61A5427a778be28Bd9bb5990956b33385c738"
       },
       "subscriptions": {
         "DepositRequestedSubscription": {
-          "to": "0x3b6371EB912bFd5C0E249A16000ffbC6B881555A",
+          "to": "0x4E4D9B21B157CCD52b978C3a3BCd1dc5eBAE7167",
           "type": 1,
           "handler": {
             "abi": "contracts/ethereum/MainchainGatewayV2.abi",
@@ -83,7 +84,7 @@
           }
         },
         "WithdrewSubscription": {
-          "to": "0x3b6371EB912bFd5C0E249A16000ffbC6B881555A",
+          "to": "0x4E4D9B21B157CCD52b978C3a3BCd1dc5eBAE7167",
           "type": 1,
           "handler": {
             "abi": "contracts/ethereum/MainchainGatewayV2.abi",
