--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,9 +15,16 @@ ENV CONFIG_PATH ''
 ENV RONIN_RPC ''
 ENV RONIN_VALIDATOR_KEY ''
 ENV RONIN_RELAYER_KEY ''
+ENV RONIN_TASK_INTERVAL ''
+ENV RONIN_TRANSACTION_CHECK_PERIOD ''
+ENV RONIN_MAX_PROCESSING_TASKS ''
+
+ENV RONIN_MAX_TASK_QUERY ''
+
 ENV ETHEREUM_RPC ''
 ENV ETHEREUM_VALIDATOR_KEY ''
 ENV ETHEREUM_RELAYER_KEY ''
+ENV ETHEREUM_GET_LOGS_BATCH_SIZE ''
 ENV VERBOSITY 3
 ENV NUMBER_OF_WORKERS 1024
 
