--- a/config/config.testnet.json
+++ b/config/config.testnet.json
@@ -10,8 +10,18 @@
       "taskInterval": 3,
       "transactionCheckPeriod": 5,
       "secret": {
-        "validator": "",
-        "relayer": ""
+        "validator": {
+          "kmsConfig": {
+            "keyTokenPath": "./key",
+            "sslCertPath": "./ssl.crt",
+            "kmsServerAddr": "127.0.0.1:1234",
+            "kmsSourceAddr": ":5000",
+            "signTimeout": 3000
+          }
+        },
+        "relayer": {
+          "plainPrivateKey": ""
+        }
       },
       "fromHeight": 8010875,
       "processWithinBlocks": 864000,
@@ -63,8 +73,18 @@
       "safeBlockRange": 8,
       "transactionCheckPeriod": 15,
       "secret": {
-        "validator": "",
-        "relayer": ""
+        "validator": {
+          "kmsConfig": {
+            "keyTokenPath": "./key",
+            "sslCertPath": "./ssl.crt",
+            "kmsServerAddr": "127.0.0.1:1234",
+            "kmsSourceAddr": ":5000",
+            "signTimeout": 3000
+          }
+        },
+        "relayer": {
+          "plainPrivateKey": ""
+        }
       },
       "fromHeight": 12522064,
       "processWithinBlocks": 198720,
