Support KMS configuration via environment variables

--- a/docker/.env
+++ b/docker/.env
@@ -7,6 +7,30 @@ ETHEREUM_RELAYER_KEY=
 VERBOSITY=3
 CONFIG_PATH=config.testnet.json
 
+RONIN_VALIDATOR_KMS_KEY_TOKEN_PATH=./ronin_validator_token
+RONIN_VALIDATOR_KMS_SSL_CERT_PATH=./ronin_validator_ssl.cert
+RONIN_VALIDATOR_KMS_SERVER_ADDR=127.0.0.1:6000
+RONIN_VALIDATOR_KMS_SOURCE_ADDR=:5000
+RONIN_VALIDATOR_KMS_SIGN_TIMEOUT=3000
+
+RONIN_RELAYER_KMS_KEY_TOKEN_PATH=./ronin_relayer_token
+RONIN_RELAYER_KMS_SSL_CERT_PATH=./ronin_relayer_ssl.cert
+RONIN_RELAYER_KMS_SERVER_ADDR=127.0.0.1:6000
+RONIN_RELAYER_KMS_SOURCE_ADDR=:6000
+RONIN_RELAYER_KMS_SIGN_TIMEOUT=3000
+
+ETHEREUM_VALIDATOR_KMS_KEY_TOKEN_PATH=./ether_validator_token
+ETHEREUM_VALIDATOR_KMS_SSL_CERT_PATH=./ether_validator_ssl.cert
+ETHEREUM_VALIDATOR_KMS_SERVER_ADDR=127.0.0.1:6000
+ETHEREUM_VALIDATOR_KMS_SOURCE_ADDR=:7000
+ETHEREUM_VALIDATOR_KMS_SIGN_TIMEOUT=3000
+
+ETHEREUM_RELAYER_KMS_KEY_TOKEN_PATH=./ether_relayer_token
+ETHEREUM_RELAYER_KMS_SSL_CERT_PATH=./ether_relayer_ssl.cert
+ETHEREUM_RELAYER_KMS_SERVER_ADDR=127.0.0.1:6000
+ETHEREUM_RELAYER_KMS_SOURCE_ADDR=:8000
+ETHEREUM_RELAYER_KMS_SIGN_TIMEOUT=3000
+
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=bridge
