--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -37,6 +37,26 @@ services:
       - RONIN_TRANSACTION_CHECK_PERIOD=${RONIN_TRANSACTION_CHECK_PERIOD}
       - RONIN_MAX_PROCESSING_TASKS=${RONIN_MAX_PROCESSING_TASKS}
       - ETHEREUM_GET_LOGS_BATCH_SIZE=${ETHEREUM_GET_LOGS_BATCH_SIZE}
+      - RONIN_VALIDATOR_KMS_KEY_TOKEN_PATH=${RONIN_VALIDATOR_KMS_KEY_TOKEN_PATH}
+      - RONIN_VALIDATOR_KMS_SSL_CERT_PATH=${RONIN_VALIDATOR_KMS_SSL_CERT_PATH}
+      - RONIN_VALIDATOR_KMS_SERVER_ADDR=${RONIN_VALIDATOR_KMS_SERVER_ADDR}
+      - RONIN_VALIDATOR_KMS_SOURCE_ADDR=${RONIN_VALIDATOR_KMS_SOURCE_ADDR}
+      - RONIN_VALIDATOR_KMS_SIGN_TIMEOUT=${RONIN_VALIDATOR_KMS_SIGN_TIMEOUT}
+      - RONIN_RELAYER_KMS_KEY_TOKEN_PATH=${RONIN_RELAYER_KMS_KEY_TOKEN_PATH}
+      - RONIN_RELAYER_KMS_SSL_CERT_PATH=${RONIN_RELAYER_KMS_SSL_CERT_PATH}
+      - RONIN_RELAYER_KMS_SERVER_ADDR=${RONIN_RELAYER_KMS_SERVER_ADDR}
+      - RONIN_RELAYER_KMS_SOURCE_ADDR=${RONIN_RELAYER_KMS_SOURCE_ADDR}
+      - RONIN_RELAYER_KMS_SIGN_TIMEOUT=${RONIN_RELAYER_KMS_SIGN_TIMEOUT}
+      - ETHEREUM_VALIDATOR_KMS_KEY_TOKEN_PATH=${ETHEREUM_VALIDATOR_KMS_KEY_TOKEN_PATH}
+      - ETHEREUM_VALIDATOR_KMS_SSL_CERT_PATH=${ETHEREUM_VALIDATOR_KMS_SSL_CERT_PATH}
+      - ETHEREUM_VALIDATOR_KMS_SERVER_ADDR=${ETHEREUM_VALIDATOR_KMS_SERVER_ADDR}
+      - ETHEREUM_VALIDATOR_KMS_SOURCE_ADDR=${ETHEREUM_VALIDATOR_KMS_SOURCE_ADDR}
+      - ETHEREUM_VALIDATOR_KMS_SIGN_TIMEOUT=${ETHEREUM_VALIDATOR_KMS_SIGN_TIMEOUT}
+      - ETHEREUM_RELAYER_KMS_KEY_TOKEN_PATH=${ETHEREUM_RELAYER_KMS_KEY_TOKEN_PATH}
+      - ETHEREUM_RELAYER_KMS_SSL_CERT_PATH=${ETHEREUM_RELAYER_KMS_SSL_CERT_PATH}
+      - ETHEREUM_RELAYER_KMS_SERVER_ADDR=${ETHEREUM_RELAYER_KMS_SERVER_ADDR}
+      - ETHEREUM_RELAYER_KMS_SOURCE_ADDR=${ETHEREUM_RELAYER_KMS_SOURCE_ADDR}
+      - ETHEREUM_RELAYER_KMS_SIGN_TIMEOUT=${ETHEREUM_RELAYER_KMS_SIGN_TIMEOUT}
     depends_on:
       - db
       - node
