--- a/config/config.testnet.json
+++ b/config/config.testnet.json
@@ -11,13 +11,7 @@
       "transactionCheckPeriod": 5,
       "secret": {
         "validator": {
-          "kmsConfig": {
-            "keyTokenPath": "./key",
-            "sslCertPath": "./ssl.crt",
-            "kmsServerAddr": "127.0.0.1:1234",
-            "kmsSourceAddr": ":5000",
-            "signTimeout": 3000
-          }
+          "plainPrivateKey": ""
         },
         "relayer": {
           "plainPrivateKey": ""
@@ -74,13 +68,7 @@
       "transactionCheckPeriod": 15,
       "secret": {
         "validator": {
-          "kmsConfig": {
-            "keyTokenPath": "./key",
-            "sslCertPath": "./ssl.crt",
-            "kmsServerAddr": "127.0.0.1:1234",
-            "kmsSourceAddr": ":5000",
-            "signTimeout": 3000
-          }
+          "plainPrivateKey": ""
         },
         "relayer": {
           "plainPrivateKey": ""
